# h5ad2cbioportaldb

./: .gitignore  README.md  config.yaml.example  pyproject.toml
src/h5ad2cbioportaldb/: __init__.py  cli.py  harmonizer.py  importer.py  mapper.py  querier.py  validator.py
src/h5ad2cbioportaldb/cbioportal/: __init__.py  client.py  integration.py  schema.py
tests/: conftest.py
tests/fixtures/: create_test_data.py
tests/integration/: test_full_import.py
tests/unit/: test_mapper.py  test_validator.py
